<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="18dp"
    android:paddingRight="32dp"
    android:clickable="true"
    android:focusable="true"
    android:background="@drawable/list_selector">

    <com.stxnext.intranet2.view.RoundedImageView
        android:id="@+id/user_avatar"
        xmlns:round="http://schemas.android.com/apk/res-auto"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@drawable/avatar_placeholder"
        round:borderColor="@color/gray_light"
        round:borderSize="@dimen/default_rounded_image_border"/>

    <LinearLayout
        android:id="@+id/user_info_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/stxnext_green"
            android:layout_marginLeft="8dp"
            android:textSize="19sp"
            android:gravity="right"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_role_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_dark"
            android:layout_marginTop="-4dp"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
