...
    <string name="intranet">Intranet</string>
    <string name="login">Log in</string>
    <string name="stxnext">STX Next</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="employees_list">Employees</string>
    <string name="holiday">Holiday</string>
    <string name="work_from_home">Work From Home</string>
    <string name="out_of_office">Out Of Office</string>
    <string name="absence">Absence</string>
    <string name="absences">Absences</string>
    <string name="teams_list">Teams</string>
    <string name="team_list">Team</string>
    <string name="settings">Settings</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login_failure">Login failed. Please try again.</string>
...
