<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:background="@color/background"
              android:orientation="vertical"
              tools:context="com.stxnext.intranet2.activity.EmployeesActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/stxnext_green"/>

        <android.support.v7.widget.CardView
            android:id="@+id/search_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            card_view:cardCornerRadius="0dp"
            android:visibility="gone"
            style="@style/CardView.Light">

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:textColor="@color/stxnext_green_darkest"
                android:textColorHint="@color/gray_dark"
                android:hint="@string/search"/>

        </android.support.v7.widget.CardView>

    </FrameLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>

    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>
