...
        <android.support.percent.PercentFrameLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.stxnext.intranet2.view.RoundedImageView
                android:id="@+id/profile_image_view"
                android:layout_width="@dimen/profile_photo_size"
                android:layout_height="@dimen/profile_photo_size"
                app:layout_marginTopPercent="18%"
                app:layout_marginLeftPercent="41%"
                android:transitionName="profileImageView"
                android:src="@drawable/avatar_placeholder"
...
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_image_height"
            android:scaleType="fitEnd"
            android:src="@drawable/stx_logo_green_blur"/>

        <com.stxnext.intranet2.view.RoundedImageView
            android:id="@+id/profile_image_view_standard"
            android:layout_width="@dimen/profile_photo_size"
            android:layout_height="@dimen/profile_photo_size"
            android:layout_gravity="center"
            android:src="@drawable/avatar_placeholder"
            android:transitionName="profileImageView"
            android:layout_marginTop="8dp"
...
                          android:layout_height="match_parent"
                          android:background="@color/background"
                          android:orientation="vertical"
                          android:layout_marginTop="10dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/worked_hours_container"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
...
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginLeft="30dp"
                                    android:gravity="left"
                                    android:width="0dp"
                                    android:layout_weight="1"
                                    android:text="@string/worked_hours_heading"
                                    android:textColor="@color/stxnext_green"
                                    android:textSize="16sp"
                                    android:textStyle="bold"/>

                                    <ImageView
                                        android:id="@+id/worked_hours_refresh_hours_card_iv"
...
                </LinearLayout>

                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@+id/user_info_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="18dp"
                    android:background="@drawable/card_selector"
                    card_view:cardCornerRadius="4dp"
...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/first_name_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:layout_marginTop="12dp"
                            android:textColor="@color/stxnext_green"
...

        </LinearLayout>

    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <FrameLayout
        android:id="@+id/floating_menu_container"
        android:layout_width="match_parent"
...
