<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="32dp"
        android:src="@drawable/stx_logo_green" />

    <TextView
        android:id="@+id/login_failed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:layout_gravity="center"
        android:layout_margin="18dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:text="@string/login_failure"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="4dp"
        android:background="@drawable/selector_default_button"
        android:layout_gravity="bottom"
        android:textColor="@android:color/white"
        android:text="@string/login" />

</LinearLayout>
